2006-11-21  Matthias Wimmer  <m@tthias.eu>

    * jsm/authreg.c: making most strings sent to a user translateable
    * jsm/sessions.c: same
    * jsm/modules/mod_xml.c: same
    * jsm/modules/mod_last.c: same
    * jsm/modules/mod_presence.c: same
    * jsm/modules/mod_roster.c: same
    * jsm/modules/mod_offline.c: same
    * jsm/modules/mod_register.c: same
    * jsm/modules/mod_admin.c: same
    * jsm/jsm.c: same
    * jsm/deliver.c: same
    * jsm/serialization.c: same
    * jabberd/base/base_unsubscribe.c: same
    * jabberd/base/base_connect.c: same
    * jabberd/base/base_accept.c: same
    * jabberd/jabberd.h: same
    * jabberd/lib/jabberdlib.h: same
    * jabberd/lib/jutil.c: same
    * jabberd/deliver.c: same
    * dialback/dialback_in.c: same
    * dialback/dialback_out.c: same
    * dialback/dialback.c: same
    * pthsock/client.c: same
    * dnsrv/dnsrv.c: same

2006-11-20  Matthias Wimmer  <m@tthias.eu>

    * xdb_sql/xdb_sql.cc: fixing big bug introduced with the latest change
    	that my cause crashes of jabberd14
    * dialback/dialback.c: fixing the tls='force' and auth options for s2s
    * dialback/dialback_in.c: fixing bug #74
    * jabberd/lib/messages.c: functions to translate messages
    * jabberd/lib/jutil.c: using the message translation function
    * jabberd/config.c: parsing configuration options to set-up locales

2006-11-19  Matthias Wimmer  <m@tthias.eu>

    * jsm/modules/mod_register.c: improved error message
    * xdb_sql/xdb_sql.cc: fixing a problem with xdb_sql handling big data

2006-11-18  Matthias Wimmer  <m@tthias.eu>

    * jabberd/jabberd.c: added note about future package name change
    * dialback/dialback.c: fixing compiler warning
    * jsm/modules/mod_register.c: new registration/XEP-0077 handling,
	configuration options to disable password changes, registration
	updates, or account deletion
    * jsm/modules/mod_auth_digest.c: same
    * jsm/modules/mod_auth_plain.c: same
    * jsm/modules/mod_auth_crypt.c: same